[package]
name = "tvm-wasi"
version = "0.0.1"
authors = ["MORITA Kazutaka <morita.kazutaka@gmail.com>"]
edition = "2018"

[dependencies]
ndarray="0.12"
serde = "1.0"
serde_json = "1.0"
tvm-runtime = { version = "0.1", path = "../../tvm/rust/runtime" }
csv = "1.1"
image = "0.20"
lazy_static = "1.1.1"
